changed bg to div because position:fixed sucks on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ font-family: 'Archivo';
 src: "fonts/Archivo-Regular.ttf"
 }
 
-body { 
+#bg { 
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: -10;
     overflow-x: hidden;
     background: url("3.png") no-repeat center center fixed;
     -webkit-background-size: cover;
